feat: 基本布局和拖拽功能

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,34 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+#app {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+}
+
+.widget-list {
+  width: 200px;
+  background-color: #f7f7f7;
+  padding: 20px;
+}
+
+.widget {
+  width: 100%;
+  height: 200px;
+  line-height: 200px;
   text-align: center;
+  outline: 1px solid red;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.panel {
+  flex: 1;
+  overflow: hidden;
+  position: relative;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.box {
+  width: 200px;
+  height: 200px;
+  outline: 1px solid blue;
+  line-height: 200px;
+  text-align: center;
+  position: absolute;
 }
